--- a/package.json
+++ b/package.json
@@ -6,18 +6,32 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "apexcharts": "^3.36.3",
     "axios": "^1.1.2",
     "dotenv": "^16.0.3",
+    "js-cookies": "^1.0.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "mqtt-react-hooks": "^3.0.0-alpha.2",
+    "paho-mqtt": "^1.1.0",
+    "precompiled-mqtt": "^4.3.14-beta",
     "primereact": "^8.6.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.6.0",
     "react-icons-md": "^1.1.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "sort-by": "^1.2.0",
+    "typescript": "^4.9.3",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
