--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.9",
     "apexcharts": "^3.36.3",
     "axios": "^1.1.2",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "js-cookies": "^1.0.4",
     "localforage": "^1.10.0",
@@ -22,6 +23,7 @@
     "primereact": "^8.6.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
@@ -57,5 +59,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
